--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Lens by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Kappil Antil
 -->
 <html>
 	<head>
@@ -19,8 +17,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Lens</h1>
-						<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+						<h1>Kappil Antil</h1>
+						<p>I am a photographer</p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
