--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 						<h1>Kappil Antil</h1>
 						<p>I am a photographer</p>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kappilantil/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/kaps___lock/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="kappilantil@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
