--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Kppil Antil</title>
+		<title>Kappil Antil</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +20,8 @@
 						<h1>Kappil Antil</h1>
 						<p>I am a photographer</p>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/kappilantil/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kappilantil/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/kaps___lock/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="kappilantil@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
